--- a/.vscode/settings.json.example
+++ b/.vscode/settings.json.example
@@ -1,3 +1,3 @@
 {
-  "pandoc.pdfOptString": "-F pandoc-crossref --filter pandoc-citeproc --pdf-engine=lualatex -N --template=/dist/to/your/template.tex"
+  "pandoc.pdfOptString": "--filter=pandoc-crossref --metadata=crossrefYaml:/dist/to/your/pandoc-crossref.yaml --filter=pandoc-citeproc --pdf-engine=lualatex --number-sections --template=/dist/to/your/template.tex"
 }
